--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     </head>
     <body>
         <script src="script.js"></script>
+        <button onclick="console.log(game())">PLAY</button>
     </body>
 </html>
