--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="choices">
+            <button id="rock-btn">ROCK</button>
+            <button id="paper-btn">PAPER</button>
+            <button id="scissors-btn">SCISSORS</button>
+        </div>
+        <button id="play-btn" onclick="console.log(game())">PLAY</button>
         <script src="script.js"></script>
-        <button onclick="console.log(game())">PLAY</button>
     </body>
 </html>
