Added textual displays & additional functionality
- Buttons now toggle on and off
- Added textual displays:
    - Player choice and Computer choice
    - Round status (win/lose/tie)
    - Score

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <button id="paper-btn">PAPER</button>
             <button id="scissors-btn">SCISSORS</button>
         </div>
-        <button id="play-btn" onclick="console.log(game())">PLAY</button>
+        <button id="play-btn" onclick="console.log(game())">PLAY</button>        
+        <div id="round-info"></div>
         <script src="script.js"></script>
     </body>
 </html>
