Implemented a carousel feature for choices:
    - Clicking the left or right arrows now triggers a carousel-like rotation of the 3 choices.

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             <h2 id="computer-score">Computer Score: 0</h2>
         </div>
         <div id="choices" class="choices-container">
-            <div>
+            <div id="rock-container">
                 <img src="" alt="Rock">
                 <button id="rock-btn">ROCK</button>
             </div>
-            
-            <div>
+            <div id="paper-container">
                 <img src="" alt="Paper">
                 <button id="paper-btn">PAPER</button>
             </div>
-            
-            <div>
+            <div id="scissors-container">
                 <img src="" alt="Scissors">
                 <button id="scissors-btn">SCISSORS</button>
             </div>
+            <button id="left-button"><==</button>
+            <button id="right-button">==></button>
         </div>
         <div class="play-btn-container">
             <button id="play-btn" onclick="console.log(game())">GO</button>
