Color scheme and re-positioning of elements
    - Added a color scheme to the page
    - Font resizing
    - Positioned elements appropriately

--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
             <h2 id="computer-score">Computer Score: 0</h2>
         </div>
         <div id="choices" class="choices-container">
-            <div id="rock-container">
+            <div id="rock-container" class="choice">
                 <img src="" alt="Rock">
             </div>
-            <div id="paper-container">
+            <div id="paper-container" class="choice">
                 <img src="" alt="Paper">
             </div>
-            <div id="scissors-container">
+            <div id="scissors-container" class="choice">
                 <img src="" alt="Scissors">
             </div>
-            <button id="left-button"><==</button>
-            <button id="right-button">==></button>
+            <div class="buttons">
+                <button id="left-button"><==</button>
+                <button id="right-button">==></button> 
+            </div>
+
         </div>
         <div class="play-btn-container">
             <button id="play-btn">GO</button>
