--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>Footer</p>
+            <p>© Copyright 2024 https://github.com/harshnugget</p>
         </div>
         <script src="script.js"></script>
     </body>
