--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Rock Paper Scissors</title>
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="header">
@@ -53,6 +53,6 @@
         <div class="footer">
             <p>© Copyright 2024 https://github.com/harshnugget</p>
         </div>
-        <!-- <script src="script.js"></script> -->
+        <script src="script.js"></script>
     </body>
 </html>
