--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                 </div>
             </div>
         </div>
+        <div class="footer-separator"></div>
         <div class="footer">
-            <p>© Copyright 2024 https://github.com/harshnugget 1</p>
+            <p>© Copyright 2024 https://github.com/harshnugget</p>
         </div>
         <script src="script.js"></script>
     </body>
