Added rock, paper, and scissor SVG images

--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
         </div>
         <div id="choices" class="choices-container">
             <div id="rock-container" class="choice">
-                <img src="" alt="Rock">
+                <img src="images/rock.svg" alt="Rock">
             </div>
             <div id="paper-container" class="choice">
-                <img src="" alt="Paper">
+                <img src="images/paper.svg" alt="Paper">
             </div>
             <div id="scissors-container" class="choice">
-                <img src="" alt="Scissors">
+                <img src="images/scissors.svg" alt="Scissors">
             </div>
             <div class="buttons">
-                <button id="left-button"><==</button>
-                <button id="right-button">==></button> 
+                <button id="left-button">&#11164</button>
+                <button id="right-button">&#11166</button> 
             </div>
-
         </div>
         <div class="play-btn-container">
             <button id="play-btn">GO</button>
@@ -43,10 +42,10 @@
             </div>
             <div id="hands-container">
                 <div id="left-hand" class="hands">
-                    <p></p>
+                    <img src="images/rock.svg" alt="Rock">
                 </div>
                 <div id="right-hand" class="hands">
-                    <p></p>
+                    <img src="images/rock.svg" alt="Rock">
                 </div>
             </div>
         </div>
