Cleaned up some code for better readability

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 id="player-score">Player Score: 0</h2>
             <h2 id="computer-score">Computer Score: 0</h2>
         </div>
-        <div id="choices" class="choices-container">
+        <div class="choices-container">
             <div id="rock-container" class="choice">
                 <img src="images/rock.svg" alt="Rock">
             </div>
