Changed "animation-container" from id to class

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p id="round-choices"></p>
                 <p id="round-status"></p>
             </div>
-            <div id="hands-container">
+            <div class="hands-container">
                 <div id="left-hand" class="hands">
                     <img src="images/rock.svg" alt="Rock">
                 </div>
