Style changes & button changes

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </div>
         </div>
         <div class="play-btn-container">
-            <button id="play-btn">GO</button>
-            <button id="reset-btn" onclick="console.log(reset())">RESET</button>
+            <button type="button" id="play-btn" name="play-btn">&#11208</button>
+            <button type="button" id="reset-btn" name="reset-btn">&#8634</button>
         </div>
         <div class="animation-container">
             <div id="round-info">
