--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Rock, Paper, Scissors!</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/rps_favicon.png">
     </head>
     <body>
         <div class="header">
