Specified "type" attribute for buttons

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <img src="images/scissors.svg" alt="Scissors">
             </div>
             <div class="buttons">
-                <button id="left-button">&#11164</button>
-                <button id="right-button">&#11166</button> 
+                <button type="button" id="left-button">&#11164</button>
+                <button type="button" id="right-button">&#11166</button> 
             </div>
         </div>
         <div class="play-btn-container">
