--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Rock, Paper, Scissors!</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="rps_favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="rps_favicon.ico?">
     </head>
     <body>
         <div class="header">
